# in-class-assignments-sarahoner

./: LICENSE  README.md  homework.hs  homework2.hs  starter-code.cabal
