name:                starter-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SilverSylvester/starter-code#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2018 Conor Reynolds
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable starter-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
